--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,1 +1,9 @@
 @import './base.css';
+
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap');
+
+body {
+  font-family: "Noto Sans JP", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+}
